--- a/daw.webapp12/src/main/resources/static/css/style.css
+++ b/daw.webapp12/src/main/resources/static/css/style.css
@@ -8715,8 +8715,9 @@ h1, h2, h3, h4, h5,
     color: #000000; }
 
 .property-details .img {
-  width: 100%;
-  height: 600px;
+  width: 30%;
+  height: 350px;
+  margin-left: 30px;
   margin-bottom: 40px; }
 
 .property-details span.subheading {
