--- a/daw.webapp12/src/main/resources/templates/properties-single.html
+++ b/daw.webapp12/src/main/resources/templates/properties-single.html
@@ -7,24 +7,24 @@
     
     <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:200,300,400,600,700,800,900&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="css/open-iconic-bootstrap.min.css">
-    <link rel="stylesheet" href="css/animate.css">
+    <link rel="stylesheet" href="/../css/animate.css">
+    <link rel="stylesheet" href="/../css/animate.css">
     
-    <link rel="stylesheet" href="css/owl.carousel.min.css">
-    <link rel="stylesheet" href="css/owl.theme.default.min.css">
-    <link rel="stylesheet" href="css/magnific-popup.css">
+    <link rel="stylesheet" href="/../css/owl.carousel.min.css">
+    <link rel="stylesheet" href="/../css/owl.theme.default.min.css">
+    <link rel="stylesheet" href="/../css/magnific-popup.css">
 
-    <link rel="stylesheet" href="css/aos.css">
+    <link rel="stylesheet" href="/../css/aos.css">
 
-    <link rel="stylesheet" href="css/ionicons.min.css">
+    <link rel="stylesheet" href="/../css/ionicons.min.css">
 
-    <link rel="stylesheet" href="css/bootstrap-datepicker.css">
-    <link rel="stylesheet" href="css/jquery.timepicker.css">
+    <link rel="stylesheet" href="/../css/bootstrap-datepicker.css">
+    <link rel="stylesheet" href="/../css/jquery.timepicker.css">
 
     
-    <link rel="stylesheet" href="css/flaticon.css">
-    <link rel="stylesheet" href="css/icomoon.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/../css/flaticon.css">
+    <link rel="stylesheet" href="/../css/icomoon.css">
+    <link rel="stylesheet" href="/../css/style.css">
   </head>
   <body>
     
@@ -49,105 +49,105 @@
 	  </nav>
     <!-- END nav -->
     
-    <section class="hero-wrap hero-wrap-2 ftco-degree-bg js-fullheight" style="background-image: url('images/bg_1.jpg');" data-stellar-background-ratio="0.5">
+    <section class="hero-wrap hero-wrap-2 ftco-degree-bg js-fullheight" style="background-image: url('/../images/bg_1.jpg');" data-stellar-background-ratio="0.5">
       <div class="overlay"></div>
       <div class="container">
         <div class="row no-gutters slider-text js-fullheight align-items-center justify-content-center">
           <div class="col-md-9 ftco-animate pb-5 text-center">
-          	<p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span>Properties <i class="ion-ios-arrow-forward"></i></span></p>
-            <h1 class="mb-3 bread">Propiedades disponibles</h1>
+          	<p class="breadcrumbs"><span class="mr-2"><a href="/MainPage">Home <i class="ion-ios-arrow-forward"></i></a></span> <span>Properties <i class="ion-ios-arrow-forward"></i></span></p>
+            <h1 class="mb-3 bread">Propiedad seleccionada</h1>
           </div>
         </div>
       </div>
     </section>
 
-		<section class="ftco-section ftco-property-details">
-      <div class="container">
-      	<div class="row justify-content-center">
-      		<div class="col-md-12">
-      			<div class="property-details">
-					  <div class="img" style="background-image: url(images/work-1.jpg);"></div>
-					  <div class="img" style="background-image: url(images/image_6.jpg);"></div>
-					  <div class="img" style="background-image: url(images/image_5.jpg);"></div>
-					  <div class="img" style="background-image: url(images/image_4.jpg);"></div>
-					  <div class="img" style="background-image: url(images/image_3.jpg);"></div>
-      				<div class="text text-center">
-      					<span class="subheading">Madrid norte</span>
-      					<h2>Casa Cielo Azul</h2>
-      				</div>
-      			</div>
-      		</div>
-      	</div>
-      	<div class="row">
-      		<div class="col-md-12 pills">
+	<section class="ftco-section ftco-property-details">
+    	<div class="container">
+			<div class="row justify-content-center">
+				<div class="col-md-12">
+					<div class="property-details">
+						<div class="row">
+							<div class="img" style="background-image: url(/../images/work-1.jpg);"></div>
+							<div class="img" style="background-image: url(/../images/image_6.jpg);"></div>
+							<div class="img" style="background-image: url(/../images/image_5.jpg);"></div>
+						</div>
+						<div class="row">	
+						<div class="img" style="background-image: url(/../images/image_4.jpg);"></div>
+						<div class="img" style="background-image: url(/../images/image_3.jpg);"></div>
+						<div class="img" style="background-image: url(/../images/image_2.jpg);"></div>
+
+						</div>
+						<div class="text text-center">
+
+						{{#Property}}
+							<span class="subheading">Madrid norte</span>
+							<h2>Casa Cielo Azul</h2>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-12 pills">
 						<div class="bd-example bd-example-tabs">
 							<div class="d-flex justify-content-center">
-							  <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
-								<li class="nav-item">
-									<a class="nav-link active" id="pills-description-tab" data-toggle="pill" href="#pills-description" role="tab" aria-controls="pills-description" aria-expanded="true">Características</a>
-								  </li>  
-							    <li class="nav-item">
-							      <a class="nav-link" id="pills-manufacturer-tab" data-toggle="pill" href="#pills-manufacturer" role="tab" aria-controls="pills-manufacturer" aria-expanded="true">Descripción y localización</a>
-							    </li>
-							    <li class="nav-item">
-							      <a class="nav-link" id="pills-review-tab" data-toggle="pill" href="#pills-review" role="tab" aria-controls="pills-review" aria-expanded="true">Opiniones</a>
-							    </li>
-							  </ul>
+								<ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+									<li class="nav-item">
+										<a class="nav-link active" id="pills-description-tab" data-toggle="pill" href="#pills-description" role="tab" aria-controls="pills-description" aria-expanded="true">Características</a>
+									</li>  
+									<li class="nav-item">
+										<a class="nav-link" id="pills-manufacturer-tab" data-toggle="pill" href="#pills-manufacturer" role="tab" aria-controls="pills-manufacturer" aria-expanded="true">Descripción y localización</a>
+									</li>
+									<li class="nav-item">
+										<a class="nav-link" id="pills-review-tab" data-toggle="pill" href="#pills-review" role="tab" aria-controls="pills-review" aria-expanded="true">Opiniones</a>
+									</li>
+								</ul>
 							</div>
-
-						  <div class="tab-content" id="pills-tabContent">
-						    <div class="tab-pane fade show active" id="pills-description" role="tabpanel" aria-labelledby="pills-description-tab">
+						<div class="tab-content" id="pills-tabContent">
+							<div class="tab-pane fade show active" id="pills-description" role="tabpanel" aria-labelledby="pills-description-tab">
 						    	<div class="row">
 						    		<div class="col-md-4">
 						    			<ul class="Características">
-						    				<li class="check"><span class="ion-ios-checkmark"></span>metros cuadrados de la casa: 500m2</li>
-						    				<li class="check"><span class="ion-ios-checkmark"></span>Habitaciones: 6</li>
-						    				<li class="check"><span class="ion-ios-checkmark"></span>Baños: 4</li>
-						    				<li class="check"><span class="ion-ios-checkmark"></span>garajes: 2</li>
+						    				<li class="check"><span class="ion-ios-checkmark"></span>metros cuadrados de la casa: {{squareMeters}} m2</li>
+						    				<li class="check"><span class="ion-ios-checkmark"></span>Habitaciones: {{rooms}}</li>
+						    				<li class="check"><span class="ion-ios-checkmark"></span>Baños: {{bathrooms}}</li>
 						    				
 						    			</ul>
 						    		</div>
 						    		<div class="col-md-4">
 						    			<ul class="Características">
-						    				<li class="check"><span class="ion-ios-checkmark"></span>Metros cuadrados de la parcela: 600m2</li>
-						    				<li class="check"><span class="ion-ios-checkmark"></span>Año de construcción:: 2018</li>
-						    				<li class="check"><span class="ion-ios-checkmark"></span>piscinas climatizadas: 1</li>
-						    				<li class="check"><span class="ion-ios-checkmark"></span>Localidad: Madrid</li>
-						    				
+						    				<li class="check"><span class="ion-ios-checkmark"></span>Precio: {{price}} $</li>
+						    				<li class="check"><span class="ion-ios-checkmark"></span>Propiedad disponible para: {{type}}</li>
+						    				<li class="check"><span class="ion-ios-checkmark"></span>Localidad: {{location}}</li>
 						    			</ul>
 						    		</div>
 						    		<div class="col-md-4">
 						    			<ul class="Características">
-						    				<li class="check"><span class="ion-ios-checkmark"></span>Situada cerca de la sierra de Madrid</li>
-						    				<li class="check"><span class="ion-ios-checkmark"></span>Amplia parcela</li>
-						    				<li class="check"><span class="ion-ios-checkmark"></span>Jardin para niños</li>
-						    				<li class="check"><span class="ion-ios-checkmark"></span>Fuente en la entrada</li>
-						    			
+						    				<li class="check"><span class="ion-ios-checkmark"></span>Dirección: {{address}}</li>
+						    				<li class="check"><span class="ion-ios-checkmark"></span>Tipo de propiedad: {{property}}</li>						    			
 						    			</ul>
 						    		</div>
 						    	</div>
 						    </div>
-
+							
 						    <div class="tab-pane fade" id="pills-manufacturer" role="tabpanel" aria-labelledby="pills-manufacturer-tab">
-						      <p> Una casa acogedora en las afueras de madrid, situada cerca de la sierra con un amplio jardin y habitaciones espaciosas. También tiene una piscina climatizada y un garage. Tendrás una amplia zona de ocio para realizar todo tipo de eventos, ¿vas a desaprovechar esta oportunidad? 
-								  La casa tiene 1200 metros cuadrados, 6 habitaciones, 2 baños amplios, 1 jacuzzi, 1 piscina climatizadad y 1 garaje.</p>
-								<p>La casa tiene 1200 metros cuadrados, 6 habitaciones, 2 baños amplios, 1 jacuzzi, 1 piscina climatizadad y 1 garaje.</p>
+						      <p> Una casa acogedora en {{location}}, con habitaciones espaciosas. ¿vas a desaprovechar esta oportunidad? 
+								  La casa tiene {{squareMeters}} metros cuadrados, {{rooms}} habitaciones y {{bathrooms}} baños amplios.</p>
 								
 								<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12119.954069497404!2d-4.141016163730674!3d40.58600886953104!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd410a40328b75a1%3A0x9bc1505ee52a51fd!2s28280%20El%20Escorial%2C%20Madrid!5e0!3m2!1ses!2ses!4v1581961235846!5m2!1ses!2ses"
  								width="800" height="650" frameborder="5" style="border:0;" allowfullscreen=""></iframe>
-
+								 {{/Property}}
 							</div>
 							<div class="tab-pane fade" id="pills-review" role="tabpanel" aria-labelledby="pills-review-tab">
 								<p> Si quiere leer las opiniones o poner una reseña tiene que registrarse. </p>
-								  <p>Si desea resgistrarse ves a la pestaña "Home" y clicka arriba a la derecha en "Acceso Usuario". </p>
-							  </div>
-						    </div>
-						  </div>
+								<p>Si desea resgistrarse ves a la pestaña "Home" y clicka arriba a la derecha en "Acceso Usuario". </p>
+							</div>
 						</div>
-		      </div>
+					</div>
 				</div>
-      </div>
-	</section>
+			</div>
+		</div>
+    </div>
+</section>
 	
 
 	
@@ -161,23 +161,23 @@
   <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00"/></svg></div>
 
 
-  <script src="js/jquery.min.js"></script>
-  <script src="js/jquery-migrate-3.0.1.min.js"></script>
-  <script src="js/popper.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
-  <script src="js/jquery.easing.1.3.js"></script>
-  <script src="js/jquery.waypoints.min.js"></script>
-  <script src="js/jquery.stellar.min.js"></script>
-  <script src="js/owl.carousel.min.js"></script>
-  <script src="js/jquery.magnific-popup.min.js"></script>
-  <script src="js/aos.js"></script>
-  <script src="js/jquery.animateNumber.min.js"></script>
-  <script src="js/bootstrap-datepicker.js"></script>
-  <script src="js/jquery.timepicker.min.js"></script>
-  <script src="js/scrollax.min.js"></script>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
-  <script src="js/google-map.js"></script>
-  <script src="js/main.js"></script>
+  <script src="/../js/jquery.min.js"></script>
+  <script src="/../js/jquery-migrate-3.0.1.min.js"></script>
+  <script src="/../js/popper.min.js"></script>
+  <script src="/../js/bootstrap.min.js"></script>
+  <script src="/../js/jquery.easing.1.3.js"></script>
+  <script src="/../js/jquery.waypoints.min.js"></script>
+  <script src="/../js/jquery.stellar.min.js"></script>
+  <script src="/../js/owl.carousel.min.js"></script>
+  <script src="/../js/jquery.magnific-popup.min.js"></script>
+  <script src="/../js/aos.js"></script>
+  <script src="/../js/jquery.animateNumber.min.js"></script>
+  <script src="/../js/bootstrap-datepicker.js"></script>
+  <script src="/../js/jquery.timepicker.min.js"></script>
+  <script src="/../js/scrollax.min.js"></script>
+  <script src="/../https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
+  <script src="/../js/google-map.js"></script>
+  <script src="/../js/main.js"></script>
     
   </body>
 </html>
