--- a/daw.webapp12/src/main/resources/templates/properties.html
+++ b/daw.webapp12/src/main/resources/templates/properties.html
@@ -54,7 +54,7 @@
       <div class="container">
         <div class="row no-gutters slider-text js-fullheight align-items-center justify-content-center">
           <div class="col-md-9 ftco-animate pb-5 text-center">
-          	<p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span>Favoritos <i class="ion-ios-arrow-forward"></i></span></p>
+          	<p class="breadcrumbs"><span class="mr-2"><a href="/MainPage">Home <i class="ion-ios-arrow-forward"></i></a></span> <span>Favoritos <i class="ion-ios-arrow-forward"></i></span></p>
             <h1 class="mb-3 bread">Tus <br>anuncios favoritos</h1>
           </div>
         </div>
@@ -67,7 +67,7 @@
           {{#Favourites}}
         	<div class="col-md-4">
         		<div class="property-wrap ftco-animate">
-        			<a href="properties-single.html" class="img" style="background-image: url(images/work-1.jpg);"></a>
+        			<a href="properties/{{id}}" class="img" style="background-image: url(images/work-1.jpg);"></a>
         			<div class="text">
         				<p class="price"><span class="old-price">{{price}}</span><span class="orig-price">{{price}}<small>/mo</small></span></p>
         				<ul class="property_list">
