--- a/daw.webapp12/src/main/resources/templates/index.html
+++ b/daw.webapp12/src/main/resources/templates/index.html
@@ -191,8 +191,8 @@
     
     <div id="invisible1">
       {{#graphValues}}
-      <p >{{key}}</p>
-      <p>{{value}}</p>
+      <p id= "{{key}}" ></p>
+      <p id="{{value}}"></p>
       {{/graphValues}}
     </div>
     <footer class="ftco-footer ftco-section">
