--- a/daw.webapp12/src/main/resources/static/css/login.css
+++ b/daw.webapp12/src/main/resources/static/css/login.css
@@ -1,4 +1,23 @@
-
+a {
+    color: #92badd;
+    display:inline-block;
+    text-decoration: none;
+    font-weight: 400;
+}
+  
+h2 {
+    text-align: center;
+    font-size: 16px;
+    font-weight: 600;
+    text-transform: uppercase;
+    display:inline-block;
+    margin: 40px 8px 10px 8px; 
+    color: #cccccc;
+}
+.ErrorMessage{
+  color: red;
+}
+  
 /* BASIC */
 
 /*html {
@@ -10,22 +29,6 @@
     font-family: "Poppins", sans-serif;
     height: 100vh;
   }*/
-  a {
-    color: #92badd;
-    display:inline-block;
-    text-decoration: none;
-    font-weight: 400;
-  }
-  
-  h2 {
-    text-align: center;
-    font-size: 16px;
-    font-weight: 600;
-    text-transform: uppercase;
-    display:inline-block;
-    margin: 40px 8px 10px 8px; 
-    color: #cccccc;
-  }
   
   
   
