--- a/daw.webapp12/src/main/resources/static/css/style.css
+++ b/daw.webapp12/src/main/resources/static/css/style.css
@@ -484,6 +484,7 @@ pre {
   padding-left: 10px;
   color:black !important;
 }
+
 .bigInput{
   width: max-content;
   height: max-content;
@@ -534,7 +535,16 @@ pre {
   -ms-flex: 0 0 16.66667%;
   flex: 0 0 16.66667%;
   max-width: 16.66667%; }
-
+.fadeIn .second .psswdInput{
+  background: #f6f6f6;
+  border: none;
+  border-radius: 4px;
+  width: 88%;
+  height: 40px;
+  /* content: normal; */
+  font-size: unset;
+  text-align: center;
+}
 .col-3 {
   -webkit-box-flex: 0;
   -ms-flex: 0 0 25%;
