--- a/daw.webapp12/src/main/resources/templates/login.html
+++ b/daw.webapp12/src/main/resources/templates/login.html
@@ -19,14 +19,27 @@
           <!-- Login Form -->
           <form action="/login" method="post">
             <h3>Sign In</h3>
+            {{#Error}}
+            <a class="ErrorMessage">{{.}}</a>
+            {{/Error}}
             
-            <input type="text" id="username" class="fadeIn second" name="username" placeholder="Email address or Username">
-            <input type="text" id="password" class="fadeIn third" name="password" placeholder="Password">
+            <input type="text" id="username" class="fadeIn second" name="username" placeholder="Username">
+            <input type="password" id="password" class="fadeIn second psswdInput" name="password" placeholder="Password" style="
+            background: #f6f6f6;
+            border: none;
+            border-radius: 4px;
+            width: 88%;
+            height: 40px;
+            font-size: unset;
+            text-align: center;">
               <input type="hidden" name="_csrf" value="{{token}}"/>
             <input type="submit" class="fadeIn fourth" value="Log In">
             
           </form>
-      
+          <form action="/logout" method="post">
+            <input type="submit" value="Sign Out" />
+            <input type="hidden" name="_csrf" value="{{token}}"/>
+          </form>
           <!-- Sign Up -->
           <div id="formFooter">
             <a class="underlineHover" href="/signUp">Registrarse</a>
