--- a/daw.webapp12/src/main/resources/templates/properties.html
+++ b/daw.webapp12/src/main/resources/templates/properties.html
@@ -77,7 +77,7 @@
         				</ul>
         				<h3><a href="properties-single.html">{{property}} en {{location}}</a></h3>
         				<span class="location">{{location}}</span>
-        				<a class="d-flex align-items-center justify-content-center btn-custom">
+        				<a class="d-flex align-items-center justify-content-center btn-custom" id ="deleteFavouriteButton" href="/deleteAdvertisement/{{id}}">
         					<span class="icon-star-o"></span>
         				</a>
         			</div>
